# nanodocs

./: .envrc  .gitignore  .info  .pre-commit-config.yaml  Dockerfile.apt  Formula  README-apt-repo.md  README-apt.md  README-release.md  README.md  README.txt  incident.txt  nanodoc.py  pyproject.toml  reset_command_files.py  run_bundle_maker_debug.py  setup.py  test-plan.md  test_headers.txt  test_headers2.txt  test_nanodoc.py
.github/: main-pr-tests.json
.github/workflows/: package-release.yml  pypi-publish.yml  unittests.yml  (+2 more)
Debian/: README.md
Formula/: nanodoc.rb
codebase-docs/: file-parts.txt  module.txt  no-fallbacks-no-backwards-compat.txt  testing.txt
docs/: headers.txt  line_numbering.txt  live_bundles.txt  specifying_files.txt  toc.txt
nanodoc/: __init__.py  bundle_maker.py  bundle_operations.py  command_client.py  core.py  data.py  files.py  nanodoc.py  ui-def.yaml
package-managers/: README.txt
py-release/: Brewfile  README.txt  new-release  new-release.py  qa.txt  requirements.txt  setup
samples/: cake.txt  new-telephone.txt
temp/: how-files-work-for-devs.txt  how-files-wortk-for-users.txt
tests/: conftest.py  fixtures.py  test_bundle_maker.py  test_bundles.py  test_bundles_integration.py  test_content_item.py  test_directory.py  test_directory_integration.py  test_e2e.py  test_expand_args.py  test_header.py  test_help.py  test_init.py  test_init_multiple_paths.py  test_is_bundle_file.py  test_line_numbers.py  test_line_ranges.py  test_live_bundles.py  test_logging.py  test_styling.py  test_to_roman.py  test_toc.py  test_version.py
(+96 files in other folders)
