[project]
name = "nanodoc"
version = "0.1.0"
description = ""
authors = [
    {name = "adebert",email = "debert@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "pytest (>=8.3.5,<9.0.0)",
    "black (>=25.1.0,<26.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
