[project]
name = "nanodoc"
version = "0.1.0"
description = ""
authors = [
    {name = "adebert",email = "debert@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
pytest = "^8.3.5"
black = "^25.1.0"
pytest-cov = "^4.1.0"
